--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -146,21 +146,25 @@
     </style>
 
     <style name="AppTabLayout" parent="Widget.MaterialComponents.TabLayout">
-        <item name="tabMaxWidth">@dimen/margin_55</item>
-        <item name="tabIndicatorColor">?attr/colorAccent</item>
-        <item name="tabIndicatorHeight">4dp</item>
-        <item name="tabPaddingStart">6dp</item>
-        <item name="tabPaddingEnd">6dp</item>
-        <item name="tabBackground">?attr/selectableItemBackground</item>
+        <item name="tabGravity">fill</item>
+        <item name="tabMode">scrollable</item>
+        <item name="tabPaddingStart">@dimen/margin_20</item>
+        <item name="tabPaddingEnd">@dimen/margin_20</item>
         <item name="tabTextAppearance">@style/AppTabTextAppearance</item>
         <item name="tabSelectedTextColor">@color/colorAccent</item>
+        <item name="android:clipToPadding">false</item>
+        <item name="android:layout_margin">@dimen/margin_5</item>
     </style>
 
     <!-- for text -->
     <style name="AppTabTextAppearance" parent="TextAppearance.MaterialComponents.Tab">
         <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@color/orange</item>
+        <item name="android:textColor">@color/colorWhite</item>
         <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="SeasonsTabTextAppearance" parent="TextAppearance.MaterialComponents.Tab">
+        <item name="android:textSize">12sp</item>
     </style>
 
 </resources>
