Added image capture & preview logic.

--- a/app/src/main/res/drawable-v24/bg_button_trans.xml
+++ b/app/src/main/res/drawable-v24/bg_button_trans.xml
@@ -4,6 +4,6 @@
         android:radius="@dimen/margin_5"
         />
     <solid
-        android:color="@color/colorPrimaryDark"
+        android:color="@color/translucentWhite"
         />
 </shape>
