--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="txt_size_20">20sp</dimen>
     <dimen name="txt_size_24">24sp</dimen>
     <dimen name="txt_size_28">28sp</dimen>
+    <dimen name="txt_size_32">32sp</dimen>
 
     <!--Margins and Padding-->
     <dimen name="margin_0">0dp</dimen>
