--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,15 +35,15 @@
 
     <style name="TextTitleStyle.Large">
         <item name="android:textColor">@color/colorPrimaryDark</item>
-        <item name="android:textSize">@dimen/txt_size_16</item>
+        <item name="android:textSize">@dimen/txt_size_32</item>
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="TextTitleStyle.Medium">
-        <item name="android:textColor">@color/colorTextDark</item>
-        <item name="android:textSize">@dimen/txt_size_12</item>
-        <item name="android:gravity">start</item>
+        <item name="android:textColor">@color/colorTextEmpty</item>
+        <item name="android:textSize">@dimen/txt_size_18</item>
+        <item name="android:gravity">center</item>
     </style>
 
     <style name="TextTitleStyle.Medium.Heading">
@@ -104,6 +104,19 @@
         <item name="android:paddingLeft">8dp</item>
         <item name="android:paddingRight">8dp</item>
         <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/txt_size_18</item>
+    </style>
+
+    <style name="ButtonStyle.Transparent">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/bg_button_trans</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/txt_size_18</item>
     </style>
 
     <style name="Theme.Translucent" parent="AppTheme">
