--- a/app/src/main/res/layout/fragment_add_new.xml
+++ b/app/src/main/res/layout/fragment_add_new.xml
@@ -29,12 +29,34 @@
             style="@style/ButtonStyle.Transparent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/txt_take_photo"
+            android:layout_gravity="center"
             android:layout_marginLeft="@dimen/margin_55"
             android:layout_marginRight="@dimen/margin_55"
-            android:layout_gravity="center"
-            />
+            android:text="@string/txt_take_photo" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_retake_photo"
+            style="@style/ButtonStyle.Transparent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="@dimen/margin_25"
+            android:layout_marginRight="@dimen/margin_25"
+            android:layout_marginBottom="@dimen/margin_25"
+            android:text="@string/txt_retake_photo"
+            android:visibility="gone" />
     </FrameLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_next"
+        style="@style/ButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="@dimen/margin_55"
+        android:layout_marginTop="@dimen/margin_25"
+        android:layout_marginRight="@dimen/margin_55"
+        android:text="@string/txt_next"
+        android:visibility="gone" />
 
 </LinearLayout>
