--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,6 +40,18 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="TextTitleStyle.Transparent">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:background">@color/colorWhite</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/txt_size_18</item>
+        <item name="android:spacing">@dimen/txt_size_14</item>
+    </style>
+
     <style name="TextTitleStyle.Medium">
         <item name="android:textColor">@color/colorTextEmpty</item>
         <item name="android:textSize">@dimen/txt_size_18</item>
