--- a/app/src/main/res/layout/fragment_view_clothings.xml
+++ b/app/src/main/res/layout/fragment_view_clothings.xml
@@ -14,8 +14,8 @@
             android:id="@+id/tab_seasons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_5"
             android:clipToPadding="false"
+            android:background="@color/mdtp_line_background"
             app:tabBackground="@drawable/tab_background"
             app:tabGravity="fill"
             app:tabIndicatorHeight="0dp"
