--- a/app/src/main/res/layout/item_women_clothing.xml
+++ b/app/src/main/res/layout/item_women_clothing.xml
@@ -42,7 +42,7 @@
                 android:scaleType="fitCenter"
                 app:srcCompat="@mipmap/ic_launcher"
                 android:layout_gravity="start"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
         </LinearLayout>
 
