--- a/app/src/main/res/layout/fragment_additional_info.xml
+++ b/app/src/main/res/layout/fragment_additional_info.xml
@@ -69,6 +69,7 @@
                 android:id="@+id/input_season"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/margin_10"
                 android:hint="@string/txt_optional" />
 
             <androidx.appcompat.widget.AppCompatCheckBox
