--- a/app/src/main/res/layout/item_women_clothing.xml
+++ b/app/src/main/res/layout/item_women_clothing.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/margin_2"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="@drawable/ripple"
+    app:cardBackgroundColor="@android:color/white"
+    app:cardCornerRadius="@dimen/margin_0"
     app:cardElevation="@dimen/margin_4"
-    android:layout_marginLeft="@dimen/margin_3"
-    android:layout_marginBottom="@dimen/margin_3"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="false">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,15 +19,16 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_cloth"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_165"
-            android:scaleType="fitCenter"
-            android:src="@color/colorAccent" />
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_empty"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="@dimen/margin_5">
+            android:layout_marginTop="@dimen/margin_5"
+            android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/txt_brand_name"
@@ -39,10 +42,10 @@
                 android:id="@+id/img_brand_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/margin_55"
-                android:scaleType="fitCenter"
-                app:srcCompat="@mipmap/ic_launcher"
                 android:layout_gravity="start"
-                android:visibility="gone" />
+                android:scaleType="fitCenter"
+                android:visibility="gone"
+                app:srcCompat="@mipmap/ic_launcher" />
 
         </LinearLayout>
 
@@ -59,12 +62,12 @@
             style="@style/TextTitleStyle.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
-            android:text="Season"
-            android:textStyle="italic"
             android:layout_marginTop="@dimen/margin_5"
-            app:textAllCaps="false"
-            android:textColor="@color/colorPrimaryDark" />
+            android:gravity="center"
+            android:text="Season"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="italic"
+            app:textAllCaps="false" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
